Admin addition of html content to the Login and Join pages of the site caused those respective forms to be shifted to the left instead of centered. Created class to center which fixed the problem.

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ body {
     background-repeat: no-repeat;
     background-image: url('/images/Sadie.jpg');
 }
+.center {
+    margin: auto;
+    text-align: center;
+}
 .content {
     margin: 0 auto;
     margin-left: 216px;
